@@ -47,8 +47,13 @@ cryptsetup (2:1.1.0~rc2-1~unreleased) unstable; urgency=low
   * raise build-depends on debhelper and debian/compat for that reason
   * update README.remote to work with latest dropbear package. thanks to
     debian@x.ray.net.
+  * make all crypttab options available to keyscripts: export them as
+    $CRYPTTAB_OPTION_$PARAM with value set to $VALUE, or to 1 in case the
+    option is a flag without value. export a list of exported options as
+    $CRYPTTAB_OPTIONS. thanks to ludwig nussel from suse for idea and
+    implmentation. document this in crypttab(5) manpage.
 
- -- Jonas Meurer <mejo@debian.org>  Thu, 01 Oct 2009 20:19:41 +0200
+ -- Jonas Meurer <mejo@debian.org>  Sat, 03 Oct 2009 21:19:10 +0200
 
 cryptsetup (2:1.0.7-2) unstable; urgency=low
 
